# JUCE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
JUCE/: CMakeLists.txt
JUCE/extras/Projucer/Source/Application/: jucer_AutoUpdater.cpp  jucer_MainWindow.cpp
JUCE/extras/Projucer/Source/CodeEditor/: jucer_OpenDocumentManager.cpp
JUCE/extras/Projucer/Source/Project/UI/: jucer_HeaderComponent.cpp
JUCE/extras/Projucer/Source/Project/UI/Sidebar/: jucer_TreeItemTypes.h
JUCE/extras/Projucer/Source/Settings/: jucer_StoredSettings.cpp
JUCE/extras/Projucer/Source/Utility/Helpers/: jucer_CodeHelpers.cpp
JUCE/modules/: CMakeLists.txt
JUCE/modules/juce_audio_processors_headless/processors/: juce_AudioProcessor.cpp
JUCE/modules/juce_box2d/box2d/Collision/: b2Collision.cpp
JUCE/modules/juce_core/: juce_core.cpp
JUCE/modules/juce_core/text/: juce_StringRef.h
JUCE/modules/juce_dsp/: juce_dsp.cpp  juce_dsp.h
JUCE/modules/juce_events/: juce_events.cpp
JUCE/modules/juce_events/native/: juce_Messaging_windows.cpp
JUCE/modules/juce_opengl/: juce_opengl.cpp
builder/: projectTemplate.cmake
extras/Projucer/: CMakeLists.txt
extras/UnitTestRunner/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/IPP/: CMakeLists.txt
modules/: CMakeLists.txt
modules/juce_audio_processors/processors/: juce_AudioProcessor.cpp
modules/juce_gui_basics/filebrowser/: juce_FileChooser.h
outputs-installers/: intsall-BallzzyDelay.sh
outputs-installers/testPackaging/: BallzzyAmp.desktop  postinstall.sh
projects/: CMakeLists.txt
projects/Documentation/: IPP.md  Milestones.md  Performances.md  PluginCheckList.md
projects/faustPedalSaturator/: CMakeLists.txt  faustPedalSaturator.jucer
projects/faustPedalSaturator/FaustResources/: pedalSaturator.dsp
projects/faustPedalSaturator/Source/: PluginAudioProcessor.h
projects/faustPedalSaturator/Source/dsp/: Processor.cpp
projects/faustPedalSaturator/Source/dsp/Bones/: FaustMultiheadFeedback.h
projects/testWebView/: CMakeLists.txt
projects/testWebView/FaustResources/: faust.h
projects/testWebView/Source/: DemoUtilities.h  FaustPlugin.h  Main.cpp  PluginAudioProcessor.cpp  PluginAudioProcessor.h  WebViewPluginDemo.h
projects/testWebView/Source/dsp/: ParameterSetup.h  Processor.cpp  Processor.h
projects/testWebView/Source/looknfeel/: TopBarLookAndFeel.h
projects/testWebView/Source/ressources/: index.html
projects/testWebView/Source/ui/: gui.cpp  gui.h
projects/testWebView/Source/ui/components/: TopBarComponent.h
projects/webviewCmake/: CMakeLists.txt
release-scripts/: BallzzyDelay_installer.iss  linux command install creator
