option(BUILD_BITCRUSHER "Build the BitCrusher plugin" ON)
option(BUILD_NEURALAMP "Build the GainPlugin plugin" ON)
option(BUILD_TEMPLATE "Build the template plugin" ON)
option(BUILD_TEMPLATEBIS "Build the template plugin" ON)
option(BUILD_FAUST_PEDAL "Build the template plugin" ON)
option(BUILD_TEST_WEBVIEW "" ON)
option(BUILD_EQSTRIP "Build the template plugin" ON)
option(BUILD_MAYERISM "Build the template plugin" ON)

if(BUILD_BITCRUSHER)
    add_subdirectory(BitCrusher)
endif()

if(BUILD_NEURALAMP)
    message("building neural amp")
    add_subdirectory(NeuralAmpPlugin)
endif()

if(BUILD_EQSTRIP)
    message("building eq strip")
    add_subdirectory(EQStrip)
endif()

if(BUILD_TEMPLATE)
    add_subdirectory(template)
endif()
if(BUILD_TEMPLATEBIS)
    #add_subdirectory(templateBis)
endif()
if(BUILD_FAUST_PEDAL)
    add_subdirectory(faustPedalSaturator)
endif()
if(BUILD_TEST_WEBVIEW)
    message("building testwebView")

    add_subdirectory(testWebView)
endif()
if(BUILD_MAYERISM)
    message("building Mayersim")

   # add_subdirectory(Mayerism)
endif ()
add_subdirectory(delayVue)